# Webex-Bot-with-Websockets-AdaptiveForm

./: README.md  adaptive_card_content.json  pyproject.toml  webex-bot-ws.py
