[tool.poetry]
name = "webex-bot-with-websockets-adaptiveform"
version = "0.1.0"
description = ""
authors = ["Amit Pal <apal2@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
webexteamssdk = "^1.7"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
